kubernetes/test/app-test-deployment-flask.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-flask-api-deployment
  labels:
    app: test-flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-flask-api
  template:
    metadata:
      labels:
        app: test-flask-api
    spec:
      containers:
      - name: test-flask-api-container
        imagePullPolicy: Always
        image: lgonzalez883/planet_api:dev # Change line here once image is uploaded to Dockerhub
        ports:
        - name: http
          containerPort: 5000
        volumeMounts:
        - name: test-redis-data-pvc
          mountPath: "/data"
        command: ['sh', '-c', 'python3 flask_api.py']
      volumes:
      - name: test-redis-data-pvc
        persistentVolumeClaim:
          claimName: test-redis-data-pvc
