kubernetes/test/app-test-deployment-redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-redis
  template:
    metadata:
      labels:
        app: test-redis
    spec:
      containers:
      - name: redis-container
	imagePullPolicy: Always
        image: redis:7
        ports:
        - containerPort: 6379
