kubernetes/test/app-test-ingress-flask.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-flask-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "exoplanets.coe332.tacc.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test-flask-api-nodeport-service
            port:
              number: 5000
