kubernetes/test/app-test-service-flask.yml
---
apiVersion: v1
kind: Service
metadata:
  name: test-flask-api-service
spec:
  selector:
    app: test-flask-api
  ports:
  - name: test-flask-api
    protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
